static/css/admin-dashboard/main.scss
@import "../global/_variables.scss";

.material {
  padding-bottom: 4em;
}

h1 {
  margin-top: 1.5em;
  margin-bottom: 1em;
}

.card {
  margin-bottom: 1em;
  display: flex;
  flex-direction: column;

  & > .title {
    font-weight: 500;
    display: flex;
    align-items: center;
    color: $main;
    font-size: 1.1rem;

    .icon {
      margin-right: .5em;
    }
  }

  .actions {
    display: flex;
    justify-content: flex-end;
    margin-top: 1em;
    flex-wrap: wrap;
    align-items: center;
  }

  & > .actions {
    align-items: flex-end;
    flex-grow: 1;
  }
}

.projects-review {
  li {
    padding-top: 1em;
    padding-bottom: 1em;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    border-bottom: 1px solid $light-gray;

    @supports (display: grid) {
      display: grid;
      grid-template-columns: 1fr auto;

      .title {
        grid-column: 1 / 3;
      }
    }

    .title {
      margin-bottom: .5em;
      flex-basis: 100%;
      font-weight: 500;
      text-overflow: ellipsis;
      white-space: nowrap;
      overflow: hidden;
    }

    .labeled > .icon {
      margin-top: .7rem;
    }

    .btn {
      margin-top: .3em;
    }
  }
}

.purchases {
  li {
    padding: 1em 0;
    border-bottom: 1px solid $light-gray;
  }

  .product {
    display: flex;
  }

  .image {
    display: none;
    height: 5em;
    width: 5em;
    border-radius: 1em;
    margin-right: 1em;
    flex-shrink: 0;

    img {
      width: 100%;
      height: 100%;
      border-radius: 1em;
    }
  }

  .title {
    margin-bottom: .5em;
  }

  .product-info {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    flex-grow: 1;
  }

  .title .type, time {
    margin-left: .5em;
    font-weight: 300;
  }

  time {
    text-align: right;
  }

  .purchaser {
    font-weight: 300;
    font-size: .9em;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
  }

  .popover-container {
    margin-top: .2em;
  }

  .parameters {
    display: flex;
    align-self: flex-start;
    justify-content: flex-end;

    .color {
      border-radius: 50%;
      padding: .9em;
    }

    .size + .color {
      margin-left: .5em;
    }
  }
}

.user-selection {
  margin: 1em 0;
  padding-bottom: 2em;
  border-bottom: 1px solid $light-gray;

  p {
    font-weight: 300;
    font-size: .95rem;
    margin: .8em .5em 0;
  }

  .dropdown {
    max-height: 11em;
    overflow-y: scroll;
  }
}

.operations {
  header {
    display: flex;
    align-items: center;

    .icon {
      stroke: $main;
    }
  }

  .subtitle {
    font-size: .95rem;
    font-weight: 300;
    margin-top: .3em;
    margin-left: 2.5rem;
  }

  .status {
    margin-left: 2em;
    font-weight: 300;

    &.good {
      color: $main;
    }

    &.bad {
      color: $danger;
    }
  }
}

.amend-balance {
  margin-bottom: 1.5em;
  padding-bottom: 1.5em;
  border-bottom: 1px solid $light-gray;

  form {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    margin-top: 1em;
  }

  .text-field {
    min-width: 4em;
    max-width: 8em;
    margin-right: 1em;
  }
}

.send-message {
  margin-bottom: 1.5em;
  padding-bottom: .5em;
  border-bottom: 1px solid $light-gray;

  form {
    margin-top: 1em;
    display: flex;
    flex-direction: column;
  }

  .btn {
    align-self: start;
  }

  .actions {
    justify-content: flex-start;
    margin-top: .5em;
  }
}

.see-profile {
  display: flex;
  align-items: flex-start;
  flex-direction: column;

  .btn {
    margin-top: .5em;
  }
}

@supports (display: grid) {
  .purchases .product-info {
    display: grid;
    grid-template-columns: 1fr auto;
    grid-template-rows: auto auto;
  }
}

@media only screen and (min-width: 480px) {
  .purchases .image {
    display: block;
  }

  .see-profile {
    @supports (display: grid) {
      display: grid;
      grid-template-columns: 1fr auto;
      grid-template-rows: auto auto;

      .subtitle {
        grid-row: 2 / 3;
        grid-column: 1 / 2;
      }

      .btn {
        grid-row: 1 / 3;
        grid-column: 2 / 3;
        margin-top: 0;
      }
    }
  }
}

@media only screen and (min-width: 780px) {
  .operations {
    display: flex;
  }

  .amend-balance, .send-message {
    flex: 1;
    margin: 0 .5em;
  }
}

@media only screen and (min-width: 780px) and (max-width: 1023px) {
  .amend-balance, .send-message {
    padding-bottom: 0;
    margin-right: 1em;
    padding-right: 1em;
    border-bottom-width: 0;
    border-right: 1px solid $light-gray;
  }

  .see-profile {
    display: flex;
  }
}

@media only screen and (min-width: 1024px) {
  @supports (display: grid) {
    .cards {
      display: grid;
      grid-template-columns: 1fr 1fr;
      column-gap: 1em;
    }

    .individual-ctls {
      grid-column: 1 / 3;
    }
  }

  .projects, .purchases-list {
    max-height: 70em;
    overflow-y: auto;
  }

  .individual-ctls .panel {
    display: flex;

    .user-selection {
      flex: 1;
      padding-bottom: 0;
      border-bottom: none;
      padding-right: 2em;
      border-right: 1px solid $light-gray;
    }

    .operations {
      flex-direction: column;
      flex: 1;
      padding-left: 2em;

      .send-message {
        margin-top: 1em;
      }
    }
  }

  .see-profile {
    margin-top: 1em;
  }
}

